--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -5,3 +5,4 @@
   <li>Staging ID: <%=@spot.staging_ID%></li>
   <li><%= link_to @spot.url%></li>
 </ul>
+<!--   <li><%= link_to "Get rid of it!", spot_path(@spot.id), :method => 'delete' %> -->
