added devise. user must login

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -6,3 +6,4 @@
   <li><%= link_to @spot.url%></li>
 </ul>
 <!--   <li><%= link_to "Get rid of it!", spot_path(@spot.id), :method => 'delete' %> -->
+<h4><%= link_to "Back to Home", spots_path%></h4>
